# bridge

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  justfile  migration.md  package.json
.github/workflows/: ci.yml
apps/bridge/: .env.example  index.html  index.js  metro.config.js  package.json  tsconfig.json  vite.config.ts
apps/bridge/android/: build.gradle  gradle.properties  gradlew  keystore.properties.example  settings.gradle
apps/bridge/android/app/: build.gradle  proguard-rules.pro
apps/bridge/android/app/src/main/: AndroidManifest.xml
apps/bridge/android/app/src/main/java/app/bridge/chat/: BridgeCoreModule.kt  BridgePackage.kt  CredentialStore.kt  MainActivity.kt  MainApplication.kt
apps/bridge/android/app/src/main/res/drawable/: ic_launcher.xml
apps/bridge/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
apps/bridge/src/: App.tsx  MarkdownText.tsx  chatUi.test.ts  chatUi.ts  index.web.tsx  links.test.ts  links.ts  theme.test.ts  theme.ts  types.ts  urlPolicy.ts
apps/bridge/src/client/: index.ts  index.web.ts  mock.test.ts  mock.ts  native.ts  nativeStream.test.ts  nativeStream.ts  web.test.ts  web.ts
crates/android-core/: Cargo.toml  build.rs  uniffi.toml
crates/android-core/src/: bridge_core.udl  lib.rs
crates/gateway/: Cargo.toml
crates/gateway/migrations/: 0001_initial.sql  0002_message_thinking.sql  0003_message_tool_calls.sql
crates/gateway/src/: config.rs  error.rs  lib.rs  main.rs  model.rs
crates/gateway/src/tools/: duckduckgo.rs  fetch_page.rs  mod.rs  net.rs  web_search.rs
scripts/: build-apk.sh  dev.sh  install.sh  mac-install.sh  mac-uninstall.sh  status.sh
