[workspace]
members = ["crates/gateway", "crates/android-core"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = "0.8.9"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
ollama-rs = { version = "0.3.5", features = ["stream"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uniffi = { version = "0.32.0", features = ["cli", "tokio"] }
url = "2.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

