[package]
name = "bridge-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
ollama-rs.workspace = true
reqwest.workspace = true
schemars.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx-core.workspace = true
sqlx-sqlite.workspace = true
subtle = "2.6"
tokio.workspace = true
url.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.20"
tower = { version = "0.5", features = ["util"] }
